# proto-demo

./: .gitignore  .gitmodules  README.md  buf.gen.yaml  buf.work.yaml  build.sh  protoc-gen.sh  protoc-gen.sync
.github/actions/setup-ssh-agent/: action.yml
.github/workflows/: .build-rust.yml  Cxx.yml  Go.yml  Rust.yml  _build_base.yml  _build_cxx.yml  _build_go.yml  _build_rust.yml  _empty.yml  _test.yml  bot.yml  bot_protoc_gen.yml  demo-cxx.yml  demo-go.yml  demo-rs.yml  empty.yml  grpc.yml  learn.yml  lint.yml  main.yml  third-party.yml
demo-cxx/: .gitignore  CMakeLists.txt  README.md  protoc-gen-cxx.sh
demo-cxx/cmd/: client.cpp  hello.cpp  server.cpp  server_mt.cpp
demo-cxx/gen-cxx-grpc/google/api/: httpbody.grpc.pb.h
demo-cxx/gen-cxx-grpc/protoc-gen-openapiv2/options/: annotations.grpc.pb.cc  openapiv2.grpc.pb.h
demo-cxx/gen-cxx-grpc/struqt/demo/v1/: demo.grpc.pb.cc
demo-cxx/gen-cxx-grpc/struqt/demo/v3/: demo.grpc.pb.cc  messages.grpc.pb.cc  messages.grpc.pb.h
demo-cxx/gen-cxx/google/api/: field_behavior.pb.cc  field_behavior.pb.h  http.pb.cc  http.pb.h  httpbody.pb.cc  httpbody.pb.h
demo-cxx/gen-cxx/protoc-gen-openapiv2/options/: annotations.pb.cc  annotations.pb.h  openapiv2.pb.cc  openapiv2.pb.h
demo-cxx/gen-cxx/struqt/common/v1/: common.pb.cc  common.pb.h
demo-cxx/gen-cxx/struqt/demo/v1/: demo.pb.cc  demo.pb.h
demo-cxx/gen-cxx/struqt/demo/v2/: demo.pb.cc  demo.pb.h
demo-cxx/gen-cxx/struqt/demo/v3/: demo.pb.cc  demo.pb.h  messages.pb.cc  messages.pb.h
demo-cxx/src/server/: demo_handler.h  demo_server.cpp  demo_server.h
demo-go/: README.md  build.setup.sh  build.sh  go.work  go.work.sum  protoc-gen-go.sh  protoc-gen.sh  protoc-setup.sh
demo-go/proto/: go.mod  go.sum
demo-go/proto/struqt/common/v1/: common.pb.go  common.pb.gw.go  common.swagger.json  common_grpc.pb.go
demo-go/proto/struqt/demo/v1/: demo.pb.go  demo.pb.gw.go  demo.swagger.json  demo_grpc.pb.go
demo-go/proto/struqt/demo/v2/: demo.pb.go  demo.pb.gw.go  demo.swagger.json  demo_grpc.pb.go
demo-go/proto/struqt/demo/v3/: demo.pb.go  demo.pb.gw.go  demo.swagger.json  demo_grpc.pb.go  messages.pb.go  messages.swagger.json
demo-go/server/: flag.go  go.mod  go.sum
demo-go/server/cmd/: flag.go  gateway.go  grpc.go
demo-go/server/cmd/demo/: main.go
demo-go/server/cmd/demo-gate/: main.go
demo-go/server/cmd/demo-grpc/: main.go
demo-go/server/cmd/demo-log/: main.go
demo-go/server/gateway/: gateway.go  grpc_client.go  handlers.go  public.go  server.go
demo-go/server/grpc/: server.go
demo-go/server/grpc/service/common/: public.go  v1common.go
demo-go/server/grpc/service/demo/: public.go  v1demo.go  v2demo.go  v3demo.go
demo-go/server/service/demo/: public.go  v1demo.go  v2demo.go  v3demo.go
demo-rs/: Cargo.toml  README.md  build.rs  protoc-gen-rust.sh
demo-rs/src/server/: main.rs  struqt.rs
demo-rs/src/server/handler/: common.rs  demo_v1.rs  demo_v2.rs  demo_v3.rs  mod.rs
