[package]
name = "demo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo-server"
path = "src/server/main.rs"


[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
tonic = "0.9.2"

[dependencies.tokio]
version = "1.28.2"
features = [
    "macros",
    "rt-multi-thread",
]


[build-dependencies.tonic-build]
version = "0.9.2"
features = ["prost"]
