[package]
name = "demo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo-rs-server"
path = "src/server/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
tonic = "0.10.2"
h2 = "0.3.24"
rustix = "0.37.27"


[dependencies.clap]
version = "4.3.11"
features = ["derive"]

[dependencies.tokio]
version = "1.28.2"
features = ["parking_lot", "rt-multi-thread", "macros", "io-util"]

[build-dependencies]
walkdir = "2.3.3"

[build-dependencies.tonic-build]
version = "0.10.2"
features = ["prost"]
